--- a/NCIPLex/pubmaster.Master
+++ b/NCIPLex/pubmaster.Master
@@ -121,7 +121,7 @@
                             </div>
                             <a href="http://www.cancer.gov/contact">www.cancer.gov/contact</a>
                             <br />
-                            <a href="mailto:fakenci@fakegpo.gov">fakenci@fakegpo.gov</a></div>
+                            <a href="mailto:nci@gpo.gov">nci@gpo.gov</a></div>
                     </div>
                 </div>
             </div>
