//tracker.nci.nih.gov/browse/OCEPROJECT-4507 - removed local analytics files and replaced with static.cancer.gov pageload.js

--- a/NCIPLCC/pubmaster.Master
+++ b/NCIPLCC/pubmaster.Master
@@ -109,8 +109,8 @@
         <!--End outerdiv-underncibanner-->
     </div>
     <!--End Outer Div-->
-    <script type="text/javascript" src="scripts/WA_PUBS_pre.js"></script>
-    <script type="text/javascript" src="scripts/s_code.js"></script>
-    <script type="text/javascript" src="scripts/WA_PUBS_post.js"></script>
+    <!-- Begin Adobe Analytics -->
+    <script src="https://static.cancer.gov/webanalytics/wa_pubs_pageload.js"></script>
+    <!-- End Adobe Analytics -->
 </body>
 </html>
