--- a/NCIPL/stylesheets/pubsent-styles.css
+++ b/NCIPL/stylesheets/pubsent-styles.css
@@ -176,8 +176,9 @@
     .textazlist { display: block; margin-top: 1em; }
     .hpnav h3 { display: block; }
     .homeintrohead { font-family: 'Montserrat',Arial,sans-serif; color: #606060; margin-top: 1em; margin-bottom: 0.5em; margin-left: 16px; }
-    .maintenancehead { font-family: 'Montserrat',Arial,sans-serif; font-weight: bold; font-size: 36px; color: #bb0e3d; margin-top: 0.125em; margin-bottom: 0.5em; margin-left: 16px; }
-    .maintenancetext { font-family: 'Montserrat',Arial,sans-serif; font-size: 18px; color: #bb0e3d; margin-top: 0.125em; margin-bottom: 0.5em; margin-left: 16px; }
+    .maintenancecontent { text-align: center; margin: 42px 0 65px 0}
+    .maintenancehead { font-family: 'Montserrat',Arial,sans-serif; font-size: 36px; color: #813989; margin-top: 0.38em; margin-bottom: 0.38em; margin-left: 16px; font-weight: bold; }
+    .maintenancetext { font-family: 'Montserrat',Arial,sans-serif; font-size: 18px; color: #813989; margin-top: 0.25em; margin-bottom: 0.5em; margin-left: 16px; }
 
     /*search results*/
     .serpcols { padding-top: .5em; padding-bottom: .5em; }
