--- a/ApplicationManagement/Views/Application/index.cshtml
+++ b/ApplicationManagement/Views/Application/index.cshtml
@@ -37,7 +37,11 @@
                 <td style="text-align:center;">
                      @(Html.ActionLink("Logs", "Log", new { id = item.ApplicationName, start = DateTime.Now.AddMonths(-1).ToString("d"), end = DateTime.Now.AddDays(1).ToString("d") })) |
                     @(Html.ActionLink("Edit", "Edit", new { id = item.ApplicationName })) | 
-                    @(Html.ActionLink("Delete", "Delete", new { id = item.ApplicationName }, new { onclick = "return confirm('Are you sure you want to delete this application and all its users?');"}))
+                    <a href="" onclick="alert('Applications cannot be deleted through the GUAM interface. Please contact the system owner before modifying any applications.')" >Delete</a>
+                    @*
+                        <!-- Removing the old delete ActionLink - this functionality should not be used in the GUAM interface. -->
+                        (Html.ActionLink("Delete", "Delete", new { id = item.ApplicationName }, new { onclick = "return confirm('Are you sure you want to delete this application and all its users?');"}))
+                    *@
                 </td>
             </tr>
     
