--- a/NCIPL/stylesheets/pubsent-styles.css
+++ b/NCIPL/stylesheets/pubsent-styles.css
@@ -375,6 +375,7 @@
 
     /* Styles for OCPL site migration */
     .hide {display: none;}
+    .hide-feat-pubs {display: none!important;}
 }
 
 /*Responsive Styles*/
