--- a/NCIPL/pubmaster.Master
+++ b/NCIPL/pubmaster.Master
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=8,9,10" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar--parent.css" />
+	<script type="text/javascript" src="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar.js" async></script>
     <title></title>
     <meta name="keywords" content="cancer,NCI,National Cancer Institute,cancer information,order publications,publication,booklet,material,pamphlet,brochure,education,support,treatment,coping,cancer patients,ebook, e-book" />
     <meta name="content-language" content="en" />
