--- a/NCIPLex/pubmaster.Master
+++ b/NCIPLex/pubmaster.Master
@@ -5,6 +5,8 @@
 <html>
 <head runat="server">
     <meta http-equiv="X-UA-Compatible" content="IE=8,9,10" />
+    <link rel="stylesheet" href="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar--parent.css" />
+	<script type="text/javascript" src="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar.js" async></script>
     <title>NCIPLex</title>
     <meta name="content-language" content="en" />
     <meta http-equiv="Pragma" content="no-cache" />
