--- a/NCIPL/pubmaster.Master
+++ b/NCIPL/pubmaster.Master
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=8,9,10" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar--parent.css" />
-	<script type="text/javascript" src="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar.js" async></script>
     <title></title>
     <meta name="keywords" content="cancer,NCI,National Cancer Institute,cancer information,order publications,publication,booklet,material,pamphlet,brochure,education,support,treatment,coping,cancer patients,ebook, e-book" />
     <meta name="content-language" content="en" />
@@ -168,8 +166,10 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script> //jqueryui dropdowns
+    <script>
         $(function () {
+
+            //jqueryui dropdowns
             $(".sm_toc").selectmenu();
             $(".sm_aud").selectmenu();
             $(".sm_ct").selectmenu();
@@ -179,6 +179,14 @@
             $(".sm_sort").selectmenu({
                 change: function (event, ui) { __doPostBack($(this).attr('name'), '') }
             });
+
+            //hide featured pubs column if no featured pubs
+            if($('table .featuredpubs').length < 1)
+            {
+                $('#hpcols li.show-for-large-up').addClass('hide-feat-pubs');
+                $('#home ul#hpcols').removeClass('large-block-grid-4').addClass('large-block-grid-3');
+            }
+
         });
     </script>
     <script>
