--- a/KIOSK/pubmasterCart.Master
+++ b/KIOSK/pubmasterCart.Master
@@ -6,6 +6,7 @@
 <META http-equiv="X-UA-Compatible" content="IE=7" />
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head id="Head1" runat="server">
+    <script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-e63d05a8f53e643e9e80f6ace129c3cf2b49d7bc.js"></script>
     <title>NCI Virtual Publication Rack</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -162,6 +163,8 @@ if (ie4||ns4||ns6){
 <div id="footer">
     <input runat="server"  type="submit" id="btnSearchOther" name="btnSearchOther" class="btn searchother"  value="Search for Other Publications" onclick="clickme();return(false);" /><input runat="server"  type="submit" id="btnViewCart" name="btnViewCart" class="btn viewcart"  value="View Cart" onclick="viewcart();return(false);" /><input runat="server"  type="submit" id="btnFinish" name="btnFinish" class="btn finish" value="Finish and Go To Main Screen" onclick="gobackAttractScreen();return(false);" />
 </div>
+    <script src="https://static.cancer.gov/webanalytics/wa_pubs_pageload.js"></script>
+    <script type="text/javascript">_satellite.pageBottom();</script>
 </body>
 </html>
 
