--- a/KIOSK/pubmasterShipping.Master
+++ b/KIOSK/pubmasterShipping.Master
@@ -8,6 +8,7 @@
 <META http-equiv="X-UA-Compatible" content="IE=7" />
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head id="Head1" runat="server">
+    <script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-e63d05a8f53e643e9e80f6ace129c3cf2b49d7bc.js"></script>
     <title>NCI Virtual Publication Rack</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -160,6 +161,7 @@ if (ie4||ns4||ns6){
     <p>
         &nbsp;</p>
 </div>
-
+    <script src="https://static.cancer.gov/webanalytics/wa_pubs_pageload.js"></script>
+    <script type="text/javascript">_satellite.pageBottom();</script>
 </body>
 </html>
