[OCPLPUBLOC-99] fixed broken links caused by DTM/linkback

--- a/NCIPL/stylesheets/pubsent-styles.css
+++ b/NCIPL/stylesheets/pubsent-styles.css
@@ -376,6 +376,7 @@
     /* Styles for OCPL site migration */
     .hide {display: none;}
     .hide-feat-pubs {display: none!important;}
+    #maincontent a:focus { position:static!important; top:auto; }
 }
 
 /*Responsive Styles*/
